[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scripts/ConstructorUI.gd" type="Script" id=1]
[ext_resource path="res://src/sprites/CreditIcon.png" type="Texture" id=2]
[ext_resource path="res://src/sprites/FoodIcon2.png" type="Texture" id=3]
[ext_resource path="res://src/sprites/FoodIcon3.png" type="Texture" id=4]
[ext_resource path="res://src/sprites/FoodIcon1.png" type="Texture" id=5]
[ext_resource path="res://src/sprites/FoodIcon5.png" type="Texture" id=6]
[ext_resource path="res://src/sprites/FoodIcon4.png" type="Texture" id=7]
[ext_resource path="res://src/theme/MainTheme.tres" type="Theme" id=8]

[node name="ConstructorUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
textures = [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ) ]
damage = [ 1.0, 3.0, 5.0, 15.0, 30.0 ]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 312.0
margin_top = 150.0
margin_right = 712.0
margin_bottom = 449.0
rect_min_size = Vector2( 400, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 398.0
margin_bottom = 299.0
custom_constants/separation = 4

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 396.0
margin_bottom = 23.0
text = "Constructor"

[node name="CreditsContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 396.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/CreditsContainer"]
margin_right = 16.0
margin_bottom = 23.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/CreditsContainer"]
margin_left = 20.0
margin_right = 78.0
margin_bottom = 23.0
text = "Credits: "

[node name="CreditAmount" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/CreditsContainer"]
margin_left = 82.0
margin_right = 109.0
margin_bottom = 23.0
text = "000"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 396.0
margin_bottom = 297.0
custom_constants/separation = 9

[node name="Snack" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_right = 396.0
margin_bottom = 33.0
text = "Snack (1C)"
icon = ExtResource( 5 )
expand_icon = true

[node name="Food" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 396.0
margin_bottom = 75.0
text = "Food (5C)"
icon = ExtResource( 3 )
expand_icon = true

[node name="Wrench" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 396.0
margin_bottom = 117.0
text = "Wrench (10C)"
icon = ExtResource( 4 )
expand_icon = true

[node name="Cable" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 396.0
margin_bottom = 159.0
text = "Heavy-Duty Calbe (25C)"
icon = ExtResource( 7 )
expand_icon = true

[node name="Antimater" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 396.0
margin_bottom = 201.0
text = "Bottled Antimater (50C)"
icon = ExtResource( 6 )
expand_icon = true

[node name="CloseButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 396.0
margin_bottom = 243.0
custom_constants/hseparation = 5
text = "Close"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/Snack" to="." method="_on_Snack_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/Food" to="." method="_on_Food_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/Wrench" to="." method="_on_Wrench_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/Cable" to="." method="_on_Cable_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/Antimater" to="." method="_on_Antimater_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
